# final-project-leemichaeljh

./: .gitignore  proposal.txt
Euterpea-test/: CHANGELOG.md  cabal.project  euterpea-test.cabal
Euterpea-test/PortMidi-0.2.0.0/: PortMidi.cabal
Euterpea-test/PortMidi-0.2.0.0/portmidi/pm_mac/: pmmacosxcm.c
Euterpea-test/app/: Main.hs
haskell-music/: LICENSE  haskell-music.cabal
haskell-music/app/: Main.hs
haskell-music/src/: MyLib.hs
