cabal-version:   3.14
name:            euterpea-test
version:         0.1.0.0
license:         NONE
author:          leemichaeljh
maintainer:      leemichaeljh@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable euterpea-test
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.18.3.0, Euterpea >= 2 && < 3
    hs-source-dirs:   app
    default-language: Haskell2010
